# cast-vla

./: README.md  launch_tpu_job.sh  launch_tpu_job_pod.sh  pyproject.toml  run_tpu.sh  ssh_pod.sh  start_tpu_job.sh  tpu_config.sh  update.sh
configs/: bridge_cast_config.py  bridge_cast_config_gpu.py  bridge_cast_config_overfit.py  bridge_config_gpu.py  cast_config.py
scripts/: check_local_tfds_tfrecords.py  inference_server.py  inference_server_bridge.py  train.py
src/big_vision/models/ppp/: gemma.py
src/big_vision/models/proj/paligemma/: gemma_bv.py
src/palivla/: dataset.py  eval_step.py  load_fns.py  model_components.py  train_step.py  utils.py
src/palivla/components/: model.py  sequence_builder.py  train_state.py  visualization.py
src/palivla/critic/: model_components.py
