[project]
name = "big-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"big-vision",
	"chex>=0.1.90",
	"distrax>=0.1.5",
	"dlimp@git+https://github.com/catglossop/dlimp.git",
	"diffusion-policy",
	"einops>=0.8.1",
	"flax>=0.9.0",
	"huggingface-hub>=0.34.1",
	"ipykernel>=6.30.0",
	"jax>=0.4.34",
	"matplotlib>=3.10.3",
	"ml-collections>=1.1.0",
	"numpy>=1.26.4",
	"octo>=0.3.0",
	"orbax-checkpoint>=0.7.0",
	"overrides>=7.7.0",
	"pip>=25.1.1",
	"prettytable>=3.16.0",
	"protobuf>=4.25.8",
	"scalax>=0.2.5",
	"scikit-learn>=1.7.1",
	"scipy>=1.16.0",
	"tfds-nightly>=4.9.0",
	"transformers>=4.54.0",
	"wandb>=0.21.0",
	"ngrok",
	"flask>=3.1.2",
	"pyngrok>=7.3.0",
	"flask-ngrok>=0.0.25",
	"opencv-python>=4.11.0.86",
	"google-cloud-logging>=3.12.1",
	"google-cloud-storage>=3.3.0",
	"tyro>=1.0.10",
	"smart-open>=7.5.1",
	"google-cloud-aiplatform>=1.142.0",
	"google-genai>=1.68.0",
	"torch>=2.11.0",
	"torchvision>=0.26.0",
	"efficientnet-pytorch>=0.7.1",
	"clip>=0.2.0",
	"fastapi>=0.136.0",
	"uvicorn>=0.44.0",
	"flags>=0.0.1.2",
]

[project.optional-dependencies]
tpu = [
	"jax[tpu]>=0.4.34",
	"libtpu-nightly"
]
gpu = [
	"jax[cuda12]>=0.4.34"
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]
prerelease = "allow"
# JAX's cuda12 extra resolves to nvidia-*-cu12 12.9 by default; that libcudart needs a
# driver that advertises CUDA 12.9+. Cap at 12.8 so stacks match e.g. R570 (CUDA 12.8).
constraint-dependencies = [
	"nvidia-cublas-cu12>=12.1.3.1,<12.9",
	"nvidia-cuda-cupti-cu12>=12.1.105,<12.9",
	"nvidia-cuda-nvcc-cu12>=12.6.85,<12.9",
	"nvidia-cuda-nvrtc-cu12>=12.1.55,<12.9",
	"nvidia-cuda-runtime-cu12>=12.1.105,<12.9",
	"nvidia-cudnn-cu12>=9.8,<10.0",
	"nvidia-cufft-cu12>=11.0.2.54,<12.9",
	"nvidia-cusolver-cu12>=11.4.5.107,<12.9",
	"nvidia-cusparse-cu12>=12.1.0.106,<12.9",
	"nvidia-nccl-cu12>=2.18.1,<3",
	"nvidia-nvjitlink-cu12>=12.1.105,<12.9",
	"nvidia-nvshmem-cu12>=3.2.5,<4",
]
conflicts = [
	[
		{extra = "tpu"},
 		{extra = "gpu"},
	],
]

[tool.uv.sources]
dlimp = { git = "https://github.com/catglossop/dlimp.git" }
big-vision = { workspace = true }
octo = { path = "octo", editable = true }
diffusion-policy = { path = "../cast/diffusion_policy", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"ipywidgets>=8.1.5",
	"isort>=6.0.0b2",
        "ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true

